--- a/platform-applications/disabled/cloudflared.yaml
+++ b/platform-applications/disabled/cloudflared.yaml
@@ -13,7 +13,7 @@ spec:
   project: platform
   source:
     path: platform/cloudflared
-    repoURL: https://github.com/<your-github-user>/<your-repo-name>.git
+    repoURL: https://github.com/DivMode/catchseo-k8.git
   syncPolicy:
     automated:
       allowEmpty: true
