--- a/platform-applications/disabled/openebs-dynamic-localpv-provisioner.yaml
+++ b/platform-applications/disabled/openebs-dynamic-localpv-provisioner.yaml
@@ -11,7 +11,7 @@ spec:
   project: platform
   source:
     path: platform/openebs-dynamic-localpv-provisioner
-    repoURL: https://github.com/<your-github-user>/<your-repo-name>.git
+    repoURL: https://github.com/DivMode/catchseo-k8.git
   syncPolicy:
     automated:
       allowEmpty: true
