--- a/platform-applications/kube-prometheus-stack.yaml
+++ b/platform-applications/kube-prometheus-stack.yaml
@@ -11,7 +11,7 @@ spec:
   project: platform
   source:
     path: platform/kube-prometheus-stack
-    repoURL: https://github.com/<your-github-user>/<your-repo-name>.git
+    repoURL: https://github.com/DivMode/catchseo-k8.git
   syncPolicy:
     automated:
       allowEmpty: true
