--- a/platform-applications/linkerd-viz.yaml
+++ b/platform-applications/linkerd-viz.yaml
@@ -12,7 +12,7 @@ spec:
   project: platform
   source:
     path: platform/linkerd-viz
-    repoURL: https://github.com/<your-github-user>/<your-repo-name>.git
+    repoURL: https://github.com/DivMode/catchseo-k8.git
   syncPolicy:
     automated:
       allowEmpty: true
